[package]
name = "semanticsimilarity_rs"
version = "0.1.1"
edition = "2021"
description = "A library designed to compute similarity/distance metrics between embeddings"
license = "MIT"  
repository = "https://github.com/maishathasin/SemanticSimilarity-rs"

[dependencies]
rayon = "1.5.1"
num-traits = "0.2"
